--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-form-component": "^2.4.0",
+    "react-native-phone-input": "^1.3.4",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
